--- a/Views/Home/Legal.cshtml
+++ b/Views/Home/Legal.cshtml
@@ -6,7 +6,7 @@
 
 <style>
     html, body {
-        background-image: url("https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA15417_hires.jpg");
+        background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/78/Dark_Rift_2012.jpg");
         background-repeat: repeat-y;
         background-size: auto;
         width: 100%;
