--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -5,7 +5,7 @@
 
 
 <style>
-html, body { background-image: url("https://get.pxhere.com/photo/star-milky-way-atmosphere-space-infinity-galaxy-nebula-outer-space-astronomy-stars-orbit-astronomical-object-915272.jpg"); background-repeat: repeat-x; background-size: cover; width: 100%; height: 100%; }
+html, body { background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/78/Dark_Rift_2012.jpg"); background-repeat: repeat-x; background-size: cover; width: 100%; height: 100%; }
 
     div.transbox {
         margin: 30px;
